# latchengine

./: .gitignore  Cargo.toml  GETTING_STARTED.md  LICENSE  LICENSE.md  README.md  latchengine.code-workspace
.github/: copilot-instructions.md  copilot-instructions.md.backup
.github/instructions/: ecs.instructions.md  networking.instructions.md  rendering.instructions.md  rust.instructions.md  test.instructions.md
.github/workflows/: build-examples.yml  release.yml
crates/latch_asset/: Cargo.toml
crates/latch_asset/src/: lib.rs
crates/latch_audio/: Cargo.toml
crates/latch_audio/src/: lib.rs
crates/latch_core/: Cargo.toml  TODO.md
crates/latch_core/src/: ecs.rs  lib.rs  math.rs  memory.rs  time.rs
crates/latch_core/src/ecs/: archetype.rs  builder.rs  bundle.rs  component.rs  entity.rs  macros.rs  mod.rs  storage.rs  system_descriptor.rs  system_handle.rs  system_macros.rs  system_registration_error.rs  system_registry.rs  world.rs
crates/latch_core/src/ecs/query/: accelerator.rs  mod.rs  relation.rs  spatial_hash.rs
crates/latch_core/src/ecs/storage/: archetype_storage.rs  column.rs  macros.rs  mod.rs
crates/latch_core/src/paging/: element.rs  page.rs
crates/latch_core/src/pool/: mod.rs  page.rs  pool.rs
crates/latch_core2/: Cargo.toml
crates/latch_core2/src/ecs/: archetype.rs  component.rs  entity.rs  main.rs  world.rs
crates/latch_editor/: Cargo.toml
crates/latch_editor/src/: main.rs
crates/latch_env/: Cargo.toml
crates/latch_env/examples/: read_mem_stats.rs
crates/latch_env/src/: memory.rs
crates/latch_metrics/: Cargo.toml
crates/latch_metrics/src/: counter.rs  frame_timer.rs  lib.rs  ring_buffer.rs  system_profiler.rs
crates/latch_net/: Cargo.toml
crates/latch_net/src/: authority.rs  cell.rs  discovery.rs  lib.rs  replication.rs
crates/latch_render/: Cargo.toml
crates/latch_render/src/: backend.rs  lib.rs  window.rs
crates/latch_runtime/: Cargo.toml
crates/latch_runtime/examples/: poc1_triangle.rs  poc2_moving_triangles.rs  poc3_typescript_logic.rs  poc3_wasm_zero_copy.rs  poc4_falling_sand.rs  poc4_typescript_logic.rs
crates/latch_runtime/shaders/: sand_circle.wgsl  triangle.wgsl
crates/latch_runtime/src/: main.rs
crates/latch_script/: Cargo.toml
crates/latch_script/src/: ffi.rs  lib.rs  runtime.rs
crates/latch_services/: Cargo.toml
crates/latch_services/src/: input.rs  lib.rs  save.rs  settings.rs
docs/: LICENSE-FAQ.md  architecture.md  cross-compilation.md  dependencies.md  ecs-double-buffering.md  ecs-modularization.md  ecs-runtime-components.md  future-optimizations.md  packaging-strategy.md  phase0-plan.md  poc1-results.md  poc2-gpu-buffer-overflow.md  query_accelerator_design.md  software-rasterizer.md  static-component-enforcement.md  static-component-model.md  wasm-ffi-architecture.md
