[workspace]
resolver = "2"
members = [
    "crates/latch_core",
    "crates/latch_render",
    "crates/latch_net",
    "crates/latch_script",
    "crates/latch_asset",
    "crates/latch_audio",
    "crates/latch_services",
    "crates/latch_runtime",
    "crates/latch_editor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Steven Barnett"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/latchengine"

[workspace.dependencies]
# Core engine crates
latch_core = { path = "crates/latch_core" }
latch_render = { path = "crates/latch_render" }
latch_net = { path = "crates/latch_net" }
latch_script = { path = "crates/latch_script" }
latch_asset = { path = "crates/latch_asset" }
latch_audio = { path = "crates/latch_audio" }
latch_services = { path = "crates/latch_services" }

# External dependencies (versions centralized)
winit = "0.30"
wgpu = "23.0"
bytemuck = { version = "1.14", features = ["derive"] }
rquickjs = { version = "0.6", features = ["bindgen", "loader"] }
glam = "0.29"  # Math library (SIMD, deterministic option available)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "2.0"

# Networking
quinn = "0.11"  # QUIC implementation
dashmap = "6.1"  # Concurrent HashMap

# ECS experimentation (we may write our own, but good reference)
hecs = "0.10"

[profile.dev]
opt-level = 1  # Slight optimization for better dev perf
debug = true

[profile.dev.package."*"]
opt-level = 2  # Optimize dependencies even in dev mode

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false

[profile.ship]
inherits = "release"
lto = "fat"
strip = true
panic = "abort"
