[package]
name = "latch_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
latch_metrics = { workspace = true }
latch_env = { workspace = true }

# External dependencies
glam = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# ECS dependencies
once_cell = { workspace = true }
rayon = { workspace = true }

# Optional: remove hecs if we write our own ECS
hecs = { workspace = true, optional = true }

[features]
default = ["metrics"]  # Enable metrics by default in dev
metrics = ["latch_metrics/metrics"]  # Forward to latch_metrics
reference_ecs = ["hecs"]  # Use hecs for initial prototyping
