[package]
name = "latch_env"
version = "0.1.0"
edition = "2021"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_System_SystemInformation",
  "Win32_System_Memory"
] }

[features]
default = []
# Enable metrics collection (disabled in production builds)
metrics = []
