[package]
name = "latch_net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
latch_core = { workspace = true }

tokio = { workspace = true }
quinn = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
