[package]
name = "latch_runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "latch"
path = "src/main.rs"

[dependencies]
latch_core = { workspace = true, features = ["metrics"] }
latch_render = { workspace = true }
latch_net = { workspace = true }
latch_script = { workspace = true }
latch_asset = { workspace = true }
latch_audio = { workspace = true }
latch_services = { workspace = true }
latch_metrics = { workspace = true, features = ["metrics"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
# For examples only
winit = { workspace = true }
wgpu = { workspace = true }
pollster = "0.3"  # For blocking on async (examples only)
bytemuck = { version = "1.14", features = ["derive"] }
rayon = { workspace = true }  # For parallel iteration in examples
